---------------------------------------------------------------------------------------------------
Version: 0.69.65
Date: ????
  Changes:
    - Rubia's axe is now needed for Paracelsin's infinite axe technology.
---------------------------------------------------------------------------------------------------
Version: 0.69.64
Date: 2025-06-19
  Changes:
    - Removed warning from Biofusion science.
    - I had to ban miniloader-redux from my planet because it kept fighting back at me with its scripting.
    - Fixed issue with ghost adjustable inserters not getting updated.
---------------------------------------------------------------------------------------------------
Version: 0.69.63
Date: 2025-06-17
  Changes:
    - Russian locale update.
    - Added new surface conditon: Asteroid density.
    - Fixed incompatibility with Electronic Locomotives
---------------------------------------------------------------------------------------------------
Version: 0.69.62
Date: 2025-06-13
  Changes:
    - BZ mod compatibility
    - Added achievements for difficulty.
    - Added another interface for planet hoppers. He didn't like the names on the first one.
---------------------------------------------------------------------------------------------------
Version: 0.69.61
Date: 2025-06-13
  Changes:
    - Added an interface for PlanetHoppers to use to block Rubia access if you don't actually have the gear.
---------------------------------------------------------------------------------------------------
Version: 0.69.60
Date: 2025-06-11
  Changes:
    - Russian locale re-reupdated.
    - Trashsteroid character damage 280 => 300 on normal difficulty, because you really should have shields.
    - Buff sniper turret: HP 300 => 600, impact resistance 0% => 30%. This should help with setting up mining outposts.
---------------------------------------------------------------------------------------------------
Version: 0.69.59
Date: 2025-06-11
  Changes: