@@ -253,7 +253,7 @@ rubia-craptonite-hip-replacement=Craptonite hip replacement
 rubia-craptonite-codpiece=Secretan codpiece
 rubia-craptonite-wood-charm=Ligma charm
 rubia-craptonite-mask=Janite Mask
-rubia-craptonite-tiber-implant=Tiberian implant
+rubia-craptonite-tiber-implant=Tiberium implant
 rubia-craptonite-grillz=Zinc grillz
 
 rubia-biofusion-science-pack=Biofusion science packs
