@@ -2,6 +2,15 @@
 Version: 0.69.65
 Date: ????
   Changes:
+    - NEW machine upgrades mod just released! This mod allows technologies to give a global module effect to all machines of a given type. Using this new mod, we have some new technologies:
+      ► New biochamber productivity tech
+      ► New cross tech for Janus
+      ► New cross tech for Lignumis / Wooden Universe
+      ► New cross tech for Paracelsin
+      ► New cross tech for Tiberian Dawn
+      ► New cross tech for Secretas & Frozeta
+      ► Cross tech for Muluna has been buffed to give a bonus to all crushers.
+      ► New cross tech for Jahtra (will be enabled when Jahtra is released)
     - Rubia's axe is now needed for Paracelsin's infinite axe technology.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.64
